# tg_poll_mini

./: .gitignore  .test.env  README.md  alembic.ini  pyproject.toml  pytest.ini
app/: config.py  database.py  main.py  run.py
app/dataaccess/migrations/: env.py
app/dataaccess/migrations/versions/: 2023_09_06_2215_initial_revision.py  2023_09_11_2343_added_text_answer_field_to_user_attempt_.py  2023_09_28_1417_add_fsm_table.py  2023_09_28_1904_add_fsm_state_table.py
app/dataaccess/models/: __init__.py  answers.py  fsm_data.py  groups.py  lessons.py  questionnaires.py  questions.py  user_attempts.py  users.py
app/dataaccess/repositories/: abstract_repos.py
app/dataaccess/repositories/sqlalchlemy_repos/: __init__.py  answers.py  base.py  fsm_data.py  groups.py  lessons.py  questionnaires.py  questions.py  users.py  (+1 more)
app/dataaccess/services/: __init__.py  fsm_data.py  question_service.py  users.py
app/dataaccess/utils/: unitofwork.py
app/entrance_exams/roblox/: models.py  routes.py  service.py
app/groups/: models.py
app/lessons/: models.py  services.py
app/migrations/: env.py
app/migrations/versions/: 2023_09_12_0035_change_users_field_id_to_int64.py  2023_09_12_0129_added_questionnaire_table.py
app/quizes/: communication.py  dao_quizes.py  models.py  router.py
app/telegram_bot/main_menu/: keyboards.py  routes.py  services.py  states.py
app/telegram_bot/quizes/: routes.py  services.py  states.py
app/telegram_bot/storages/: postgresql.py
app/users/: models.py  services.py
db_data/: users.txt
tests/: conftest.py
tests/unit_tests/: test_db.py
(+4 files in other folders)
