[tool.poetry]
name = "tg-poll-mini"
version = "0.1.0"
description = ""
authors = ["o.zamesov@mail.ru <o.zamesov@mail.ru>"]
readme = "README.md"
packages = [{include = "tg_poll_mini"}]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^3.0.0"
aioschedule = "^0.5.2"
python-dotenv = "^1.0.0"
alembic = "^1.12.0"
asyncpg = "^0.28.0"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.20"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

