[tool.poetry]
name = "tg_poll_mini"
version = "0.1.0"
description = ""
authors = ["o.zamesov@mail.ru <o.zamesov@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^3.1.1"
SQLAlchemy = "^2.0.22"
python-dotenv = "^1.0.0"
asyncpg = "^0.28.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
